--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
-    "expo-font": "~8.4.0",
+    "expo-font": "^8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -39,6 +39,7 @@
     "@types/react-native": "~0.63.2",
     "@types/react-navigation": "^3.4.0",
     "@types/react-redux": "^7.1.16",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "~4.0.0"
   },
   "private": true
