--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@types/react-native-dotenv": "^0.2.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "^8.4.0",
@@ -19,6 +20,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dotenv": "^2.5.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
