fix create expo token

--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       "useNextNotificationsApi": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/rn-icon.png"
     }
   }
 }
